Updates from code review

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
     <header>
       <div class="logo"> <!--Contains logo and magazine name-->
         <img src="./logo.png" alt="logo">
-        <p>URBAN STYLE</p>
+        <h1>URBAN STYLE</h1>
       </div>
       <nav>
         <a href="#">Home</a>
@@ -25,41 +25,41 @@
 
     <article class="main-news">
       <img src="./main-news.jpeg" alt="Urban fashion photo">
-      <h1>Back in town</h1>
+      <h2>Back in town</h2>
     </article>
 
     <section class="news-container">
       <article class="news">
         <img src="news1.jpeg">
-        <h2>Embroidery on sweater - DIY and stay unique this fall</h2>
+        <h3>Embroidery on sweater - DIY and stay unique this fall</h3>
       </article>
       <article class="news">
         <img src="news2.jpeg">
-        <h2>20 jeans jackets that will newer go out of fashion</h2>
+        <h3>20 jeans jackets that will newer go out of fashion</h3>
       </article>
       <article class="news">
         <img src="news3.jpeg">
-        <h2>Modern autumn wedding dresses and how to style them</h2>
+        <h3>Modern autumn wedding dresses and how to style them</h3>
       </article>
       <article class="news">
         <img src="news4.jpeg">
-        <h2>The simple and elegant woman is back to work</h2>
+        <h3>The simple and elegant woman is back to work</h3>
       </article>
       <article class="news">
         <img src="news5.jpeg">
-        <h2>Stay in the sun with the latest and most colorful sunglasses</h2>
+        <h3>Stay in the sun with the latest and most colorful sunglasses</h3>
       </article>
       <article class="news">
         <img src="news6.jpeg">
-        <h2>Coolest street on Manhattan for fashion photography</h2>
+        <h3>Coolest street on Manhattan for fashion photography</h3>
       </article>
       <article class="news">
         <img src="news7.jpeg">
-        <h2>Where to be seen for lazy Sunday brunch (and what to wear)</h2>
+        <h3>Where to be seen for lazy Sunday brunch (and what to wear)</h3>
       </article>
       <article class="news">
         <img src="news8.jpeg">
-        <h2>How to draw attention with monochrome pop colors</h2>
+        <h3>How to draw attention with monochrome pop colors</h3>
       </article>
     </section>
 
