fixed the issues suggested in the code review

--- a/code/index.html
+++ b/code/index.html
@@ -17,12 +17,12 @@
       <div></div>
       <div></div>
     </div>
-    <nav>
+    <nav class="nav-left">
       <a href="#">NEWS</a>
       <a href="#">TOURS</a>
     </nav>
     <img src="logo_invert.png" alt="The Hikealot Logo" style="height: 45px">
-    <nav>
+    <nav class="nav-right"> 
       <a href="#">PEOPLE</a>
       <a href="#">EQUIPMENT</a>
     </nav>
