Some changes done based on the feedback I got

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,9 @@
         <a href="#">Contact</a>
         <a href="#"><b>Subscribe</b></a>
         <a href="https://www.linkedin.com/in/gabriella-bolin-b718544a/">
-        <img src="linkedin80.png" alt="LinkedIn logo link"></a>       
+        <img 
+        src="linkedin80.png" 
+        alt="LinkedIn logo link"></a>       
       </div>
     </header>
 
@@ -30,7 +32,10 @@
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         </h4>
         <div class="box spc">
-          <img class="img1" src="https://images.unsplash.com/photo-1597947216176-73eeb189ea51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Bild på beige vas med vassstrå i.">
+          <img 
+          class="img1" 
+          src="https://images.unsplash.com/photo-1597947216176-73eeb189ea51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
+          alt="Bild på beige vas med vassstrå i.">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
         do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Ut enim ad minim veniam, quis nostrud exercitation ullamco 
@@ -90,7 +95,9 @@
         <a href="#">
           <h3>NEWS</h3>
           <h6>Posted: August 25th, 2020</h6>
-          <img class="img-small" src="https://images.unsplash.com/photo-1528741254566-d718e868201f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
+          <img 
+          class="img-small" 
+          src="https://images.unsplash.com/photo-1528741254566-d718e868201f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
           alt="Picture with ballons and a pink chair">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedu 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -106,7 +113,9 @@
         <a href="#">
           <h3>NEWS</h3>
           <h6>Posted: August 25th, 2020</h6>
-          <img class="img-small" src="https://images.unsplash.com/photo-1597218859878-0e6cad008639?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
+          <img 
+          class="img-small" 
+          src="https://images.unsplash.com/photo-1597218859878-0e6cad008639?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
           alt="Picture with wood burning stove etc.">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -120,7 +129,9 @@
         <a href="#">
           <h3>NEWS</h3>
           <h6>Posted: August 26th, 2020</h6>
-          <img class="img-small" src="https://images.unsplash.com/photo-1551029118-d3c293a67c0e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          <img 
+          class="img-small" 
+          src="https://images.unsplash.com/photo-1551029118-d3c293a67c0e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
           alt="Picture of a plant etc.">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
@@ -138,7 +149,9 @@
         <a href="#">
           <h3>NEWS</h3>
           <h6>Posted: August 24th, 2020</h6>
-          <img class="img-small" src="https://images.unsplash.com/photo-1453904300235-0f2f60b15b5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          <img 
+          class="img-small" 
+          src="https://images.unsplash.com/photo-1453904300235-0f2f60b15b5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
           alt="Picture of a plant">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -157,7 +170,9 @@
           <h3>NEWS</h3>
           <h6>Posted: August 24th, 2020</h6>
           <div class="box">
-            <img class="img-smaller" src="https://images.unsplash.com/photo-1582732896686-e0b8c500faa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            <img 
+            class="img-smaller" 
+            src="https://images.unsplash.com/photo-1582732896686-e0b8c500faa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
             alt="Picture of a lamp">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -174,7 +189,9 @@
           <h3>NEWS</h3>
           <h6>Posted: August 24th, 2020</h6>
           <div class="box">
-            <img class="img-smaller" src="https://images.unsplash.com/photo-1553797794-4c4d2c55dbfb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            <img 
+            class="img-smaller" 
+            src="https://images.unsplash.com/photo-1553797794-4c4d2c55dbfb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
             alt="Picture of a lamp">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -200,7 +217,10 @@
             laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
             do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam. </p>
-            <img class="img-smallest" src="https://images.unsplash.com/photo-1523976888287-7454b4df44f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Picture of cups">
+            <img 
+            class="img-smallest" 
+            src="https://images.unsplash.com/photo-1523976888287-7454b4df44f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
+            alt="Picture of cups">
           </div>
         </a>    
       </div> 
