project review and clean up.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <section class="monthly-cloud">
     <section class="container">
-      <img src="cloudom.jpeg" alt="Cloud of the Month image">
+      <img src="./cloudom.jpeg" alt="Cloud of the Month image">
       <div>
         <h2>Cloud of the Month</h2>
         <p>Polar stratospheric clouds: nacreous</p>
@@ -153,12 +153,14 @@
         </div>
       </section>
     </section>
+
     <footer>
-      <p><span style='font-size:25px;'>&#129418;</span></p>
-      <p>This page was made by Peggy @<a href="https://blipsandclicks.com">blipsandclicks</a> for educational purposes.
-      </p>
-      <p>Images and content from the <a href="https://cloudatlas.wmo.int/en/home.html">International Cloud Atlas</a>.
-      </p>
+      <div class="footer">
+        This page was made by Peggy @
+          <a href="https://blipsandclicks.com">blipsandclicks</a>
+          for educational purposes as a part of the Technigo Bootcamp 2020. Images and content from the <a href="https://cloudatlas.wmo.int/en/home.html">International Cloud Atlas</a>.
+      </div>
+      <div class="footer"><span>&#129418; | </span><img src="./technigo-logo.svg"></div>
     </footer>
 </body>
 </html>
