final push to sort directory

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div></div>
       <div></div>
     </div>
-    <img class="logo-full" src="/img/cc_logo.png" alt="Cloud Club logo">
-    <img class="logo-ico" src="/img/cc_ico.png" alt="Cloud Club logo mini">
+    <img class="logo-full" src="img/cc_logo.png" alt="Cloud Club logo">
+    <img class="logo-ico" src="img/cc_ico.png" alt="Cloud Club logo mini">
     <nav>
       <a href="#">About</a>
       <a href="#">Support</a>
@@ -26,7 +26,7 @@
 
   <section class="monthly-cloud">
     <section class="container">
-      <img src="/img/cloudom.jpeg" alt="Cloud of the Month image">
+      <img src="img/cloudom.jpeg" alt="Cloud of the Month image">
       <div>
         <h2>Cloud of the Month</h2>
         <p>Polar stratospheric clouds: nacreous</p>
@@ -49,7 +49,7 @@
         <!-- Cirrus, Ci -->
         <div class="high">
           <h4>CIRRUS (Ci)</h4>
-          <img src="/img/ci.jpeg" alt="Cirrus cloud image">
+          <img src="img/ci.jpeg" alt="Cirrus cloud image">
           <p class="content">Detached clouds in the form of white, delicate filaments or white or mostly white patches
             or narrow bands. These clouds have a fibrous (hair-like) appearance, or a silky sheen, or both.</p>
           <p>HIGH LEVEL</p>
@@ -58,7 +58,7 @@
         <!-- Cirrocumulus, Cc -->
         <div class="high">
           <h4>CIRROCUMULUS (Cc)</h4>
-          <img src="/img/cc.jpeg" alt="Cirrocumulus cloud image">
+          <img src="img/cc.jpeg" alt="Cirrocumulus cloud image">
           <p class="content">Thin, white patch, sheet or layer of cloud without shading, composed of very small elements
             in the form of grains, ripples, etc., merged or separate, and more or less regularly arranged; most of the
             elements have an apparent width of less than 1°.</p>
@@ -68,7 +68,7 @@
         <!-- Cirrostratus, Cs -->
         <div class="high">
           <h4>CIRROSTRATUS (Cs)</h4>
-          <img src="/img/cs.jpeg" alt="Cirrostratus cloud image">
+          <img src="img/cs.jpeg" alt="Cirrostratus cloud image">
           <p class="content">Transparent, whitish cloud veil of fibrous (hair-like) or smooth appearance, totally or
             partly covering the sky, and generally producing halo phenomena.</p>
           <p>HIGH LEVEL</p>
@@ -77,7 +77,7 @@
         <!-- Altocumulus, Ac -->
         <div class="med">
           <h4>ALTOCUMULUS (Ac)</h4>
-          <img src="/img/ac.jpeg" alt="Altocumulus cloud image">
+          <img src="img/ac.jpeg" alt="Altocumulus cloud image">
           <p class="content">White or grey, or both white and grey, patch, sheet or layer of cloud, generally with
             shading, composed of laminae (a layer or layers), rounded masses, rolls, etc., which are sometimes partly
             fibrous or diffuse and which may or may not be merged; most of the regularly arranged small elements usually
@@ -88,7 +88,7 @@
         <!-- Altostratus, As -->
         <div class="med">
           <h4>ALTOSTRATUS (As)</h4>
-          <img src="/img/as.jpeg" alt="Altostratus cloud image">
+          <img src="img/as.jpeg" alt="Altostratus cloud image">
           <p class="content">Greyish or bluish cloud sheet or layer of striated (grooves or channels in cloud
             formations, arranged parallel to the flow of the air), fibrous or uniform appearance, totally or partly
             covering the sky, and having parts thin enough to reveal the Sun at least vaguely, as through ground glass
@@ -99,7 +99,7 @@
         <!-- Nimbostratus, Ns -->
         <div class="med">
           <h4> NIMBOSTRATUS (Ns)</h4>
-          <img src="/img/ns.jpeg" alt="Nimbostratus cloud image">
+          <img src="img/ns.jpeg" alt="Nimbostratus cloud image">
           <p class="content">Grey cloud layer, often dark, the appearance of which is made diffuse by more or less
             continuously falling rain or snow, which in most cases reaches the ground. It is thick enough throughout to
             blot out the Sun.</p>
@@ -110,7 +110,7 @@
         <!-- Stratocumulus, Sc-->
         <div class="low">
           <h4> STRATOCUMULUS (Sc)</h4>
-          <img src="/img/sc.jpeg" alt="Stratocumulus cloud image">
+          <img src="img/sc.jpeg" alt="Stratocumulus cloud image">
           <p class="content">Grey or whitish, or both grey and whitish, patch, sheet or layer of cloud that almost
             always has dark parts, composed of tessellations, rounded masses, rolls, etc., which are non-fibrous (except
             for virga) and which may or may not be merged; most of the regularly arranged small elements have an
@@ -121,7 +121,7 @@
         <!-- Stratus, St-->
         <div class="low">
           <h4> STRATUS (St)</h4>
-          <img src="/img/st.jpeg" alt="Stratus cloud image">
+          <img src="img/st.jpeg" alt="Stratus cloud image">
           <p class="content">Generally grey cloud layer with a fairly uniform base, which may give drizzle, snow or snow
             grains. When the Sun is visible through the cloud, its outline is clearly discernible. This type does not
             produce halo phenomena except, possibly, at very low temperatures.</p>
@@ -132,7 +132,7 @@
         <!-- Cumulus, Cu -->
         <div class="low">
           <h4> CUMULUS (Cu)</h4>
-          <img src="/img/cu.jpeg" alt="Cumulus cloud image">
+          <img src="img/cu.jpeg" alt="Cumulus cloud image">
           <p class="content">Detached clouds, generally dense and with sharp outlines, developing vertically in the form
             of rising mounds, domes or towers, of which the bulging upper part often resembles a cauliflower. The sunlit
             parts of these clouds are mostly brilliant white; their bases are relatively dark and nearly horizontal.</p>
@@ -143,7 +143,7 @@
         <!-- Cumulonimbus, Cb -->
         <div class="low">
           <h4> CUMULONIMBUS (Cb)</h4>
-          <img src="/img/cb.jpeg" alt="Cumulonimbus cloud image">
+          <img src="img/cb.jpeg" alt="Cumulonimbus cloud image">
           <p class="content">Heavy and dense cloud, with a considerable vertical extent, in the form of a mountain or
             huge towers. At least part of its upper portion is usually smooth, or fibrous or striated, and nearly always
             flattened; this part often spreads out in the shape of an anvil or vast plume.</p>
@@ -160,7 +160,7 @@
           <a href="https://blipsandclicks.com">blipsandclicks</a>
           for educational purposes as a part of the Technigo Bootcamp 2020. Images and content from the <a href="https://cloudatlas.wmo.int/en/home.html">International Cloud Atlas</a>.
       </div>
-      <div class="footer"><span>&#129418; | </span><img src="/img/technigo-logo.svg"></div>
+      <div class="footer"><span>&#129418; | </span><img src="img/technigo-logo.svg"></div>
     </footer>
 </body>
 </html>
