--- a/index.html
+++ b/index.html
@@ -1,73 +1,111 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The ultimate Corona news site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- Google font-->
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet">
-    <!-- Meta tag for responsiveness -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Favicon stuff-->
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The ultimate Corona news site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- Google font-->
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet">
+  <!-- Meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Favicon stuff-->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
   <link rel="manifest" href="../assets/site.webmanifest">
-  </head>
-  <body>
-    <header>
-       <!-- Logo and navbar -->
-      <img class= "icon" src ="./assets/icon-corona-black.png" alt="Corona virus">
-      <h1> #CORONA</h1>
-      <h2> - the corona news site</h2>
-      <nav>
-        
-        <a href="https://www.worldometers.info/coronavirus/?">Corona cases</a>
-        <a href="https://www.youtube.com/watch?v=bqx19f0ceUo">Corona TikTok Dance</a>
-        <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">WHO</a>
-        <a href="https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/statistik-och-analyser/bekraftade-fall-i-sverige/">FHM</a>
-      </nav>  
-    
-  <!-- Tablet navbar -->
+</head>
+
+<body>
+  <header>
+    <!-- Logo and navbar -->
+    <img class="icon" src="./assets/icon-corona-black.png" alt="Corona virus">
+    <h1> #CORONA</h1>
+    <h2> - the corona news site</h2>
+    <nav>
+
+      <a href="https://www.worldometers.info/coronavirus/?">Corona cases</a>
+      <a href="https://www.youtube.com/watch?v=bqx19f0ceUo">Corona TikTok Dance</a>
+      <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">WHO</a>
+      <a href="https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/statistik-och-analyser/bekraftade-fall-i-sverige/">FHM</a>
+    </nav>
+
+    <!-- Tablet navbar -->
     <div class="navbar_tablet">
       <a href="https://www.worldometers.info/coronavirus/?">Corona cases</a>
       <a href="https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/statistik-och-analyser/bekraftade-fall-i-sverige/">FHM</a>
-      <img class= "nav_icon" src ="./assets/icon-corona-black.png" alt="Corona virus">
+      <img class="nav_icon" src="./assets/icon-corona-black.png" alt="Corona virus">
       <a href="https://www.youtube.com/watch?v=bqx19f0ceUo">Corona TikTok Dance</a>
       <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">WHO</a>
-  </div>
-</header>
-  <!-- The big news content -->
-    <section class="big-news">
-        <div class="news"><img src="./assets/corona_3.jpg" alt="Corona virus"></div>
-        <div class="news"><p>According to the CDC, there is no specific antiviral treatment recommended for infection with novel coronavirus. Anyone infected with the virus should receive supportive care to help relieve symptoms.The CDC recommends the following prevention measures:
-          Wash your hands often with soap and water for at least 20 seconds. 
-          </p></div>
-    </section>
-
-    <!-- News card grid-->
-    <div class="news_cards">
-      <div class="card"><img src="./assets/corona_1.jpg" alt="Stay at home"><p>Corona from home</psta></div>
-      <div class="card"><img src="./assets/corona_2.jpg" alt="Corona game"><p>Games at home></p></div>
-      <div class="card"><img src="./assets/corona_bignews.jpg" alt="Social distancing"><p>Keep your distance</p></div>
-      <div class="card"><img src="./assets/corona_4.jpg" alt="Social distancing"><p> Social distance</p></div>
-      <div class="card"><img src="./assets/corona_5.jpg" alt="Mask and hand alcohol"><p> Will mask do it?</p></div>
-      <div class="card"><img src="./assets/corona_6.jpg" alt="Mask"><p>Preventing Corona</p></div>
-      <div class="card"><img src="./assets/corona_7.jpg" alt="Coronavirus"><p>Origin of Corona </p></div>
-      <div class="card"><img src="./assets/corona_8.jpg" alt="Pills"><p>Corona vitamins</p></div>
     </div>
+  </header>
+  <!-- The big news content -->
+  <section class="big-news">
+    <div class="news">
+      <img src="./assets/corona_3.jpg" alt="Corona virus"></div>
+    <div class="news">
+      <p>According to the CDC, there is no specific antiviral treatment recommended for infection with novel
+        coronavirus. Anyone infected with the virus should receive supportive care to help relieve symptoms.The CDC
+        recommends the following prevention measures:
+        Wash your hands often with soap and water for at least 20 seconds.
+      </p>
+    </div>
+  </section>
 
-     <!-- Footer-->
-    <footer>
-        <div class="instagram">
-        <a href="https://www.instagram.com/marjaana_star/?hl=en" target="_blank"><img src="./assets/instagram-icon.png" alt="Click to visit us on Instagram"></a>
-      </div>
-      <div class="github">
-        <a href="https://github.com/MayaBlixt" target="_blank"><img src="./assets/github-9-64.png" alt="Click to visit us on Github"></a>
-      </div>
-      <div class="linkedin">
-        <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank"><img src="./assets/linkedin_icon.png" alt="Click to visit me on Linkedin"></a>
-      </div>
-      </footer>
-  </body>
+  <!-- News card grid-->
+  <div class="news_cards">
+    <div class="card">
+      <img src="./assets/corona_1.jpg" alt="Stay at home">
+      <p>Corona from home</psta>
+    </div>
+    <div class="card">
+      <img src="./assets/corona_2.jpg" alt="Corona game">
+      <p>Games at home></p>
+    </div>
+    <div class="card">
+      <img src="./assets/corona_bignews.jpg" alt="Social distancing">
+      <p>Keep your distance</p>
+    </div>
+    <div class="card">
+      <img src="./assets/corona_4.jpg" alt="Social distancing">
+      <p> Social distance</p>
+    </div>
+    <div class="card">
+      <img src="./assets/corona_5.jpg" alt="Mask and hand alcohol">
+      <p> Will mask do it?</p>
+    </div>
+    <div class="card">
+      <img src="./assets/corona_6.jpg" alt="Mask">
+      <p>Preventing Corona</p>
+    </div>
+    <div class="card">
+      <img src="./assets/corona_7.jpg" alt="Coronavirus">
+      <p>Origin of Corona </p>
+    </div>
+    <div class="card">
+      <img src="./assets/corona_8.jpg" alt="Pills">
+      <p>Corona vitamins</p>
+    </div>
+  </div>
+
+  <!-- Footer-->
+  <footer>
+    <div class="instagram">
+      <a href="https://www.instagram.com/marjaana_star/?hl=en" target="_blank">
+        <img src="./assets/instagram-icon.png" alt="Click to visit us on Instagram">
+      </a>
+    </div>
+    <div class="github">
+      <a href="https://github.com/MayaBlixt" target="_blank">
+        <img src="./assets/github-9-64.png" alt="Click to visit us on Github">
+      </a>
+    </div>
+    <div class="linkedin">
+      <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank">
+        <img src="./assets/linkedin_icon.png" alt="Click to visit me on Linkedin">
+      </a>
+    </div>
+  </footer>
+</body>
+
 </html>
