finished changes after change request

--- a/code/index.html
+++ b/code/index.html
@@ -68,7 +68,9 @@
       </article>
 
   <!-- FOOTER -->
-  <footer></footer>
+  <footer>
+    <p class="footer-text">© Swecation Magazine by Caroline Birgersson</p>
+  </footer>
 
 </body>
 
