--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,9 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+
+      <button>testing 123</button>
+     
     </header>
 
     <section class="big-news">
