Basic design added

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <nav>
+      <div class="nav">
+        <div class="nav-buttons">
+          <div class="btn-red nav-button"></div>
+          <div class="btn-orange nav-button"></div>
+          <div class="btn-green nav-button"></div>
+        </div>
+        <div class="nav-menu">
+          <a class="nav-link" href="#">Toppnyheter</a>
+          <a class="nav-link" href="#">Senastenytt</a>
+          <a class="nav-link" href="#">Bevakningar</a>
+        </div>
+
+        <div class="nav-logo">
+          <img class="tech-logo" src="logo.svg" alt="">
+        </div>
+      </div>
+    </nav>
+
+  </header>
+
+  <section>
+    <!-- The big news content -->
+    <div class="big-news">
+      <div class="breaking-news">
+        <h1 class="breaking-news-h1">BREAKING NEWS</h1>
+        <p class="breaking-news-p">The technigo team decided to release week 2's project early. Rumor says students are pulling all nighters to
+          get it done as quickly as possible.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="">
+    <!-- The other news  -->
+  </section>
+
+  <footer>
+    <div class="footer">
+
+    </div>
+  </footer>
+</body>
+
 </html>
