More styling added

--- a/code/index.html
+++ b/code/index.html
@@ -21,7 +21,7 @@
           <div class="btn-green nav-button"></div>
         </div>
         <div class="nav-menu">
-          <a class="nav-link" href="#">Toppnyheter</a>
+          <a class="nav-link" href="">Toppnyheter</a>
           <a class="nav-link" href="#">Senastenytt</a>
           <a class="nav-link" href="#">Bevakningar</a>
         </div>
@@ -38,6 +38,7 @@
     <!-- The big news content -->
     <div class="big-news">
       <div class="breaking-news">
+        <img src="logo.svg" alt="">
         <h1 class="breaking-news-h1">BREAKING NEWS</h1>
         <p class="breaking-news-p">The technigo team decided to release week 2's project early. Rumor says students are pulling all nighters to
           get it done as quickly as possible.</p>
