More Styling and content added.

--- a/code/index.html
+++ b/code/index.html
@@ -2,17 +2,17 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+
 </head>
 
 <body>
   <header>
-    <!-- Some kind of logo and navbar -->
     <nav>
       <div class="nav">
         <div class="nav-buttons">
@@ -23,7 +23,6 @@
         <div class="nav-menu">
           <a class="nav-link" href="">Toppnyheter</a>
           <a class="nav-link" href="#">Senastenytt</a>
-          <a class="nav-link" href="#">Bevakningar</a>
         </div>
 
         <div class="nav-logo">
@@ -38,10 +37,59 @@
     <!-- The big news content -->
     <div class="big-news">
       <div class="breaking-news">
-        <img src="logo.svg" alt="">
+        <img class="breaking-news-logo" src="images/breaking-news.jpg" alt="">
         <h1 class="breaking-news-h1">BREAKING NEWS</h1>
-        <p class="breaking-news-p">The technigo team decided to release week 2's project early. Rumor says students are pulling all nighters to
+        <p class="breaking-news-p">The technigo team decided to release week 2's project early. Rumor says students are
+          pulling all nighters to
           get it done as quickly as possible.</p>
+      </div>
+      <div class="regular-news">
+
+        <div class="card1 card-layout">
+
+          <img src="images/img_avatar.png" alt="">
+
+          <div class="card-container">
+            <h4>Lorem Ipsum</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo. Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a, pellentesque orci.</p>
+
+          </div>
+
+        </div>
+
+        <div class="card2 card-layout">
+
+          <img src="images/img_avatar.png" alt="">
+
+          <div class="card-container">
+            <h4>Lorem Ipsum</h4>
+            <p>TeLorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo. Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a, pellentesque orci.xt</p>
+
+          </div>
+
+        </div>
+
+        <div class="card3 card-layout">
+
+          <img src="images/img_avatar.png" alt="">
+
+          <div class="card-container">
+            <h4>Lorem Ipsum</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo. Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a, pellentesque orci.</p>
+          </div>
+
+        </div>
+        <div class="card4 card-layout">
+
+          <img src="images/img_avatar.png" alt="">
+
+          <div class="card-container">
+            <h4>Lorem Ipsum</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo. Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a, pellentesque orci.</p>
+
+          </div>
+
+        </div>
       </div>
 
     </div>
@@ -53,7 +101,9 @@
 
   <footer>
     <div class="footer">
-
+      <div class="footer-text">
+        <p>&copy; 2020 Rasmus Persson - Technigo Bootcamp</p>
+      </div>
     </div>
   </footer>
 </body>
