--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <h1>I like Candy</h1>
     </header>
 
     <section class="big-news">
