--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header> <!-- Some kind of logo and navbar -->
+      <nav>
+        <img src="" class="logo-image" alt="BLABLA">
+
+        <ul>
+          <li>Products</li>
+          <li>About</li>
+          <li>Contact</li>
+          <li>Internal</li>
+
+        </ul>
+
+      </nav>
+
+
     </header>
 
     <section class="big-news">
