--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <nav>
+        
+      </nav>
     </header>
 
     <section class="big-news">
