--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
+<html lang="eng"></html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Project 2: Music Magazine</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=devise-width, initial-scale=1.0">
+   
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img src="./images/logo" alt="Logo">
+      <h1>Music you should listen to</h1>
+      <nav>
+        <ul>
+          <li>Hip Hop</li>
+          <li>Soul</li>
+          <li>Jazz</li>
+          <li>RnB</li>
+          <li>Indie</li>
+          <li>Pop</li>
+        </ul>
+      </nav>
     </header>
 
-    <section class="big-news">
+    <section class="artist-of-the-month">
       <!-- The big news content -->
+      <img src ="./images/priya_ragu" alt="Priya Ragu">
+      <h2>Priya Ragu</h2>
+      <p class="mainarticle">
+        The child of Sri Lankan parents, Ragu would sing in Tamil at family functions and made her stamp on the Zurich music scene from an early age. She just never thought her music would be heard by millions.
+        “In Switzerland you don’t see that many artists that break through internationally, so there was no one to look up to, she says. ​“I didn’t feel [a music career] was really realistic for me.”
+        In 2019 she quit her 9 – 5 and travelled to New York, setting herself one task – to write ten songs in six months. While she was there she hit up US rapper and long-term friend Oddisee and recorded her soulful tracks in his studio, giving her momentum, recognition and most importantly, self-belief.
+        “I really loved the energy,” she says of the experience. ​“There were a lot of creative, positive vibes. [Oddisee] gave me the equipment and I just worked with my brother via Skype and voice messages.”
+        Ragu’s slick production is all down to her rapper brother Japhna Gold, proving it pays to keep it in the family. Together the duo have developed a signature sound, blending raspy vocals with an electro-pop beat that often nods to their South Indian heritage.
+        Debut single Good Love 2.0 is an absolute banger, guaranteed to get stuck in your head. If you haven’t already heard it played via Annie Mac on Radio 1 or on Radio 1Xtra earlier this year, you no doubt will have caught it on loop while playing FIFA 21.
+        For now, Ragu is working on getting her tracks out into the world and gearing up for the day she can finally perform live. ​“I just hope that we can tour, she says. ​“We just created a band, so it would be dope if we could play live again and create memories, you know.”
+        Listen to Good Love 2.0 below and get your 100% fill with Priya Ragu.
+        </p>
     </section>
 
-    <section class="">
+    <section class="previous-artists">
+      <h3>Loyle Carner</h3>
+        <p></p>
+      <h3>Barney Artist</h3>
+        <p></p>
+      <h3>Celeste</h3>
+        <p></p>
+      <h3>Cleo Sol</h3>
+        <p></p>
+      <h3>Foxwarren</h3>
+        <p></p>
+      <h3>Joy Crookes</h3>
+        <p></p>
+      <h3>Arlos Parks</h3>
+        <p></p>
       <!-- The other news  -->
+
     </section>
   </body>
 </html>
