--- a/code/index.html
+++ b/code/index.html
@@ -6,28 +6,28 @@
     <title>Project 2: Music Magazine</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=devise-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
    
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <img src="./images/logo" alt="Logo">
-      <h1>Music you should listen to</h1>
+      <img src="../images/logo.jpg" alt="Logo">
+      <h1>Music Magazine</h1>
       <nav>
         <ul>
-          <li>Hip Hop</li>
-          <li>Soul</li>
-          <li>Jazz</li>
-          <li>RnB</li>
-          <li>Indie</li>
-          <li>Pop</li>
+          <li>Home</li>
+          <li>Concerts</li>
+          <li>Events</li>
+          <li>About Us</li>
         </ul>
       </nav>
     </header>
 
     <section class="artist-of-the-month">
-      <!-- The big news content -->
-      <img src ="./images/priya_ragu" alt="Priya Ragu">
+    <!-- The big news content -->
+      <img src ="../images/priya_ragu.jpg" alt="Priya Ragu">
       <h2>Priya Ragu</h2>
       <p class="mainarticle">
         The child of Sri Lankan parents, Ragu would sing in Tamil at family functions and made her stamp on the Zurich music scene from an early age. She just never thought her music would be heard by millions.
@@ -42,21 +42,42 @@
     </section>
 
     <section class="previous-artists">
-      <h3>Loyle Carner</h3>
-        <p></p>
-      <h3>Barney Artist</h3>
-        <p></p>
-      <h3>Celeste</h3>
-        <p></p>
-      <h3>Cleo Sol</h3>
-        <p></p>
-      <h3>Foxwarren</h3>
-        <p></p>
-      <h3>Joy Crookes</h3>
-        <p></p>
-      <h3>Arlos Parks</h3>
-        <p></p>
-      <!-- The other news  -->
+    <!-- The other news  -->
+      <Div class="artist">
+        <h3>Loyle Carner</h3>
+          <p>Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning.</p>
+      </Div>
+
+      <Div class="artist">
+        <h3>Barney Artist</h3>
+          <p>Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. </p>
+      </Div>
+
+      <Div class="artist"> 
+       <h3>Celeste</h3>
+          <p>If British singer-songwriter Celeste isn’t already on your radar, chances are you’ll be her biggest fan by the end of the year.</p>
+      </Div>
+      
+      <Div class="artist">
+        <h3>Cleo Sol</h3>
+          <p>20 year old Cleo Sol was born to musical parents who met in a Jazz band.</p>
+      </Div>
+
+      <Div class="artist">
+        <h3>Foxwarren</h3>
+          <p>Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
+          friends originally formed more than a decade ago.</p>
+      </Div>
+
+      <Div class="artist">
+        <h3>Joy Crookes</h3>
+          <p>Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B.</p>
+      </Div>
+      
+      <Div class="artist">
+        <h3>Arlos Parks</h3>
+          <p>Arlo Parks is a 20 year old poet/singer from London.</p>
+      </Div>
 
     </section>
   </body>
