add basic structure and content

--- a/code/index.html
+++ b/code/index.html
@@ -4,10 +4,26 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Livvic&display=swap" rel="stylesheet">
   </head>
+
   <body>
-    <header>
+    <header class="header">
+      <div class="header-title">
+      <h1>Sneakers & News</h1>
+      </div>
+      <nav class=nav-container>
+
+        <ul>
+          <li class="nav-button">Home</li>
+          <li class="nav-button">About</li>
+          <li class="nav-button">Release Dates</li>
+          <li class="nav-button">Contact</li>
+        </ul>
+      </nav>
       <!-- Some kind of logo and navbar -->
     </header>
 
