p class "author/published"

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: Music Magazine</title>
+    <title>Project 2: Noemi's Music Magazine</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=devise-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,7 +14,7 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <img src="../images/logo.jpg" alt="Logo">
-      <h1>Music Magazine</h1>
+      <h1>Noemi's Music Magazine</h1>
       <nav>
         <ul>
           <li>Home</li>
@@ -46,6 +46,7 @@
       <Div class="artist">
         <h3>Loyle Carner</h3>
           <p>Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning.</p>
+          <p class="autor-pubished">by Noemi, 01.01.2021</p>
       </Div>
 
       <Div class="artist">
